Opsmx-Provider-Config-V412/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-demo-svc
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8088
  selector:
    app: canary-demo
